--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
                     <h2>Настройки</h2>
                 </div>
                 <div class="settings-container">
+                    <!-- Секция: О приложении -->
+                    <div class="settings-section">
+                        <div class="settings-section-header">
+                            <h3>ℹ️ О приложении</h3>
+                        </div>
+                        <div class="settings-section-content">
+                            <div class="app-info">
+                                <div class="info-row">
+                                    <span class="info-label">Версия:</span>
+                                    <span class="info-value" id="currentVersion">Загрузка...</span>
+                                </div>
+                                <button id="checkUpdatesBtn" type="button" class="btn btn-primary">
+                                    🔄 Проверить обновления
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <!-- Секция: Ключи API -->
                     <div class="settings-section">
                         <div class="settings-section-header">
